# witness

./: .dockerignore  .gitignore  Cargo.toml  Docker  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  TESTING.md  docker-compose.yaml  docker-entrypoint-gateway.sh
configs/server/: nginx.conf
crates/witness-cli/: Cargo.toml
crates/witness-cli/src/: client.rs  freebird_client.rs  main.rs  token_wallet.rs
crates/witness-cli/src/commands/: anchors.rs  anonymous.rs  get.rs  mod.rs  proof.rs  subscribe.rs  timestamp.rs  token.rs  verify.rs  verify_federation.rs
crates/witness-core/: Cargo.toml
crates/witness-core/src/: bls.rs  crypto.rs  error.rs  external_anchors.rs  federation.rs  lib.rs  merkle.rs  signature_scheme.rs  types.rs
crates/witness-gateway/: Cargo.toml
crates/witness-gateway/src/: admin.rs  anchor_manager.rs  anchor_providers.rs  batch_manager.rs  federation_client.rs  freebird.rs  freebird_client.rs  main.rs  metrics.rs  notifications.rs  server.rs  storage.rs  witness_client.rs
crates/witness-gateway/static/admin/: app.js  index.html  styles.css
crates/witness-node/: Cargo.toml
crates/witness-node/src/: config.rs  main.rs  server.rs
examples/: demo.sh  gateway.db  network.json  setup-gateway.sh  setup-triple.sh  setup.sh  start-gateway.sh  start-triple.sh  start.sh  stop.sh  witness1.json  witness2.json  witness3.json
examples/bls/: README.md  demo.sh  setup.sh  start.sh  stop.sh  test-file.txt
examples/federation/: README.md  demo.sh  setup.sh  start.sh  stop.sh
examples/gateway1/: network.json  witness1.json  witness2.json  witness3.json
examples/gateway2/: network.json  witness1.json  witness2.json  witness3.json
landing/: index.html
