[workspace]
resolver = "2"
members = [
    "crates/witness-core",
    "crates/witness-node",
    "crates/witness-gateway",
    "crates/witness-cli",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
authors = ["The Carpocratian Church of Commonaltity and Equality, Inc."]
repository = "https://github.com/flammafex/witness"
homepage = "https://github.com/flammafex/witness"
readme = "README.md"
description = "A federated threshold witness timestamping system"

[workspace.dependencies]
# Core dependencies
witness-core = { path = "crates/witness-core", version = "0.1.1" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blst = "0.3"
sha2 = "0.10"
rand = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
