[package]
name = "witness-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "witness"
path = "src/main.rs"

[dependencies]
witness-core.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
sha2.workspace = true
