[package]
name = "witness-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
blst.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
rand.workspace = true
