[package]
name = "witness-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "witness-gateway"
path = "src/main.rs"

[dependencies]
witness-core.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hex.workspace = true
async-trait = "0.1"
