[package]
name = "witness-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Gateway server that aggregates witness signatures for timestamping"
repository.workspace = true
homepage.workspace = true
keywords = ["timestamp", "gateway", "witness", "federation", "aggregation"]
categories = ["cryptography", "web-programming::http-server"]

[[bin]]
name = "witness-gateway"
path = "src/main.rs"

[dependencies]
witness-core.workspace = true
ethers = { version = "2.0", features = ["rustls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hex.workspace = true
base64.workspace = true
async-trait = "0.1"
futures-util = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
