[package]
name = "witness-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Individual witness node server for the Witness timestamping system"
repository.workspace = true
homepage.workspace = true
keywords = ["timestamp", "witness", "server", "signatures", "cryptography"]
categories = ["cryptography", "web-programming::http-server"]

[[bin]]
name = "witness-node"
path = "src/main.rs"

[dependencies]
witness-core.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
ed25519-dalek.workspace = true
blst.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hex.workspace = true
